--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -19,18 +19,6 @@
   title = {Fitting Linear Mixed-Effects Models Using lme4},
   journal = {Journal of Statistical Software}
 }
-@article{Lado2013,
-  doi = {10.1534/g3.113.007807},
-  url = {https://doi.org/10.1534/g3.113.007807},
-  year  = {2013},
-  month = {9},
-  volume = {3},
-  number = {12},
-  pages = {2105--2114},
-  author = {Bettina Lado and Ivan Matus and Alejandra Rodríguez and Luis Inostroza and Jesse Poland and François Belzile and Alejandro del Pozo and Martín Quincke and Marina Castro and Jarislav von Zitzewitz},
-  title = {Increased Genomic Prediction Accuracy in Wheat Breeding Through Spatial Adjustment of Field Trial Data},
-  journal = {G3: Genes$\vert$Genomes$\vert$Genetics}
-}
 @article{Gilmour2017,
   url = {https://www.vsni.co.uk/},
   year  = {2017},
@@ -48,4 +36,23 @@
   author = {Dae-Jin Lee and María Durbán and Paul Eilers},
   title = {Efficient two-dimensional smoothing with P-spline ANOVA mixed models and nested bases},
   journal = {Computational Statistics {\&} Data Analysis}
+}
+@misc{Millet2019,
+  doi = {10.15454/IASSTN},
+  url = {https://data.inrae.fr/citation?persistentId=doi:10.15454/IASSTN},
+  author = {Millet, Emilie J. and Pommier, Cyril and Buy, Mélanie and Nagel, Axel and Kruijer, Willem and Welz-Bolduan, Therese and Lopez, Jeremy and Richard, Cécile and Racz, Ferenc and Tanzi, Franco and Spitkot, Tamas and Canè, Maria-Angela and Negro, Sandra S. and Coupel-Ledru, Aude and Nicolas, Stéphane D. and Palaffre, Carine and Bauland, Cyril and Praud, Sébastien and Ranc, Nicolas and Presterl, Thomas and Bedo, Zoltan and Tuberosa, Roberto and Usadel, Bj\"{o}rn and Charcosset, Alain and {van Eeuwijk}, Fred A. and Draye, Xavier and Tardieu, Fran\c{c}ois and Welcker, Claude},
+  title = {A multi-site experiment in a network of European fields for assessing the maize yield response to environmental scenarios},
+  publisher = {Portail Data Inra},
+  year = {2019}
+}
+@article{Millet2016,
+  doi = {10.1104/pp.16.00621},
+  url = {https://doi.org/10.1104/pp.16.00621},
+  year = {2016},
+  month = jul,
+  publisher = {American Society of Plant Biologists ({ASPB})},
+  pages = {pp.00621.2016},
+  author = {Emilie Millet and Claude Welcker and Willem Kruijer and Sandra Negro and Stephane Nicolas and Sebastien Praud and Nicolas Ranc and Thomas Presterl and Roberto Tuberosa and Zoltan Bedo and Xavier Draye and Bjoern Usadel and Alain Charcosset and Fred van Eeuwijk and Francois Tardieu and Aude Coupel-Ledru and Cyril Bauland},
+  title = {Genome-wide analysis of yield in Europe: allelic effects as functions of drought and heat scenarios},
+  journal = {Plant Physiology}
 }
